--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,33 +1,50 @@
-<div class="contact-container px-5 pt-5 text-light d-flex flex-column align-items-center">
+<div
+  class="
+    contact-container
+    px-5
+    pt-5
+    text-light
+    d-flex
+    flex-column
+    align-items-center
+    justify-content-center
+  "
+>
   <h2>Get In touch</h2>
   <div class="adress-container col-md-6 text-center">
-    <div class="name">Ny <span class="underline">Ainga</span>  Fandresena <span class="underline">Ramangalahy</span></div>
+    <div class="name">
+      Ny <span class="underline">Ainga</span> Fandresena
+      <span class="underline">Ramangalahy</span>
+    </div>
     <p class="adress">Lot II N 187/7 Soavinandriana</p>
     <p class="city">Antananarivo, Madagascar</p>
-
   </div>
 
   <div class="info-container mt-5 row col-md-8">
-    <div class="info col-md-3 px-0 text-center">
+    <div class="info col-6 col-md-3 px-0 text-center">
       <i class="fa fa-phone fa-3x"></i>
       <p>034 95 907 60</p>
     </div>
 
-    <a class="info col-md-3 px-0 text-center" href="mailto:aingaramangalahy@gmail.com">
+    <a
+      class="info col-6 col-md-3 px-0 text-center"
+      href="mailto:aingaramangalahy@gmail.com"
+    >
       <i class="fa fa-envelope fa-3x"></i>
       <p>aingaramangalahy@gmail.com</p>
     </a>
 
-    <a class="info col-md-3 px-0 text-center" href="https://github.com/aingaRamangalahy">
+    <a
+      class="info col-6 col-md-3 px-0 text-center"
+      href="https://github.com/aingaRamangalahy"
+    >
       <i class="fa fa-github fa-3x"></i>
       <p>aingaRamangahy</p>
     </a>
 
-    <a class="info col-md-3 px-0 text-center" href="skype:aingaramangalahy">
+    <a class="info col-6 col-md-3 px-0 text-center" href="skype:aingaramangalahy">
       <i class="fa fa-skype fa-3x"></i>
       <p>live:aingaramangalahy</p>
     </a>
   </div>
-
-
 </div>
