--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,10 @@
-<div class="home-container">
-  <div class="content col-md-6">
-    <div class="text-light">
-      <p class="personal-profile-name">Ainga Ramangalahy</p>
-      <p class="personal-profile-work">Full stack web developer</p>
-      <p>
+<div class="home-container d-flex">
+  <div class="content d-flex align-items-center col-md-8">
+    <div class="text-light content-items mx-5 px-3">
+      <p class="personal-profile-hi">Hi, </p>
+      <p class="personal-profile-name">I am  <span class="name">Ainga Ramangalahy</span></p>
+      <p class="personal-profile-work">A full stack web developer</p>
+      <p class="main-text">
         I am a 24 years old passionate web developer based in Antananarivo.
         <br />
         Curious and motivated by the desire to learn and improve. I have a sense
@@ -24,6 +25,9 @@
           ><i class="fa fa-facebook-square"></i
         ></a>
       </p>
+      <div class="myself d-none d-md-inline">
+        <img src="assets/me.png" alt="ainga ramangalahy">
+      </div>
+    </div>
     </div>
   </div>
-</div>
