--- a/src/app/pages/skills/skills-bloc/skills-bloc.component.html
+++ b/src/app/pages/skills/skills-bloc/skills-bloc.component.html
@@ -1,9 +1,10 @@
 <div
+  hoverClass
   class="skill-bloc-container d-flex flex-column justify-content-between pt-3 "
 >
   <p class="px-2 mx-2 my-0">{{ skill?.name }}</p>
   <div class="logo align-self-center">
-    <i [class]="skill?.className"></i>
+    <i  [class]="skill?.className"></i>
   </div>
   <div class="progress">
     <div
