--- a/src/app/pages/skills/skills-bloc/skills-bloc.component.scss
+++ b/src/app/pages/skills/skills-bloc/skills-bloc.component.scss
@@ -1,5 +1,5 @@
 .skill-bloc-container {
-  height: 200px;
+  height: 150px;
   border: 1px solid #ccc;
   border-radius: 5px;
   transition: all .3s ease;
@@ -7,9 +7,14 @@
 
 
   &:hover {
-    border-left: 4px solid #4B599D;
+
     .logo {
       transform: translateY(10px);
+    }
+    .progress {
+      .progress-bar {
+        background-color: #669DD4;;
+      }
     }
   }
 
@@ -23,7 +28,8 @@
     height: 0.5rem !important;
     overflow: visible;
     .progress-bar {
-      background: #ccc
+      background: #ccc;
+      transition: all .4s ease-in-out;
     }
 
     .value {
