--- a/src/app/pages/skills/skills.component.html
+++ b/src/app/pages/skills/skills.component.html
@@ -1,8 +1,36 @@
 <div class="skills-container px-5 pt-3">
-  <h2 class="my-4">My Skills</h2>
+  <h2 class="my-4">Programming Languages</h2>
 
   <div class="skills row col-md-12">
-    <ng-template ngFor [ngForOf]="skills" let-skill>
+    <ng-template ngFor [ngForOf]="progLanguages" let-skill>
+      <div class="skill-container col-md-3 my-2">
+        <app-skills-bloc [skill]="skill"></app-skills-bloc>
+      </div>
+    </ng-template>
+  </div>
+
+  <h2 class="my-4">Frameworks</h2>
+  <div class="skills row col-md-12">
+    <ng-template ngFor [ngForOf]="frameworks" let-skill>
+      <div class="skill-container col-md-3 my-2">
+        <app-skills-bloc [skill]="skill"></app-skills-bloc>
+      </div>
+    </ng-template>
+  </div>
+
+
+  <h2 class="my-4">Databases</h2>
+  <div class="skills row col-md-12">
+    <ng-template ngFor [ngForOf]="databases" let-skill>
+      <div class="skill-container col-md-3 my-2">
+        <app-skills-bloc [skill]="skill"></app-skills-bloc>
+      </div>
+    </ng-template>
+  </div>
+
+  <h2 class="my-4">Versioning</h2>
+  <div class="skills row col-md-12">
+    <ng-template ngFor [ngForOf]="versioning" let-skill>
       <div class="skill-container col-md-3 my-2">
         <app-skills-bloc [skill]="skill"></app-skills-bloc>
       </div>
