fix hackathon wording

--- a/src/app/pages/resume/resume.component.html
+++ b/src/app/pages/resume/resume.component.html
@@ -27,7 +27,7 @@
   </ng-template>
 
   <app-title>
-    Hackaton
+    Hackathon
   </app-title>
 
   <ng-template ngFor [ngForOf]="resumeHackathon" let-hack>
