update about me message

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,8 +9,7 @@
         <br />
         Curious and motivated by the desire to learn and improve. I have a sense
         of listening and service reinforced by 1 year of experience working on
-        various projects. A constantly evolving technical capacity by constant
-        training.
+        various projects. An evolving technical competence through continuous training.
       </p>
       <p class="personal-profile-social">
         <a href="https://github.com/aingaRamangalahy" target="_blank"
