--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,10 +8,13 @@
         I am a 24 years old passionate web developer based in Antananarivo.
         <br />
         Curious and motivated by the desire to learn and improve. I have a sense
-        of listening and service reinforced by 1 year of experience working on
-        various projects. An evolving technical competence through continuous training.
+        of listening and service reinforced by working on various projects. An evolving technical competence through continuous training.
       </p>
-      <p class="personal-profile-social">
+      <div class="cta ">
+        <a [routerLink]="['/portfolio']"  class="btn mx-2 text-light">My portfolio</a>
+        <a [routerLink]="['/contact']" class="btn mx-2 text-light">Get in touch</a>
+      </div>
+      <!-- <p class="personal-profile-social align-self-end">
         <a href="https://github.com/aingaRamangalahy" target="_blank"
           ><i class="fa fa-github"></i
         ></a>
@@ -23,9 +26,9 @@
         <a href="https://www.facebook.com/ramangalahy.ainga/" target="_blank"
           ><i class="fa fa-facebook-square"></i
         ></a>
-      </p>
+      </p> -->
       <div class="myself d-none d-md-inline">
-        <img src="assets/me.png" alt="ainga ramangalahy">
+        <img src="assets/me_.png" alt="ainga ramangalahy">
       </div>
     </div>
     </div>
