--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -23,7 +23,17 @@
     }
 
     .main-text {
-      font-size: 17px;
+      font-size: 16px;
+      font-weight: 500;
+    }
+
+    .cta {
+      a {
+        border: 1px solid #ccc;
+        text-transform: uppercase;
+        font-size: 13px;
+        font-weight: 300;
+      }
     }
 
     .personal-profile-social {
@@ -46,7 +56,7 @@
       position: absolute;
       top: -10px;
       right: -20%;
-      background-color: #0B2239;
+      background-color: #0b2239;
       animation: float 6s ease-in-out infinite;
       &:hover {
         img {
@@ -57,7 +67,7 @@
         position: absolute;
         width: 100%;
         height: auto;
-        top: -25%;
+        top: -10%;
         transition: all 1.3s ease;
       }
     }
