--- a/src/app/@shared/stack/stack.component.scss
+++ b/src/app/@shared/stack/stack.component.scss
@@ -1,11 +1,12 @@
 .stack-item {
   display: inline-block;
   background: #c8c6cb4a;
-  padding: 3px 8px;
+  padding: 5px 13px;
   border-radius: 14px;
 
   .item {
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 600;
+    padding: O 13px;
   }
 }
