--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,18 +1,25 @@
 <div class="home-container d-flex">
   <div class="content d-flex align-items-center col-md-8">
-    <div class="text-light content-items mx-5 px-3">
-      <p class="personal-profile-hi">Hi, </p>
-      <p class="personal-profile-name">I am  <span class="name">Ainga Ramangalahy</span></p>
-      <p class="personal-profile-work">A full stack web developer</p>
-      <p class="main-text">
+    <div class="text-light content-items mx-5">
+      <p class="personal-profile-hi">Hi,</p>
+      <p class="personal-profile-name ls-06">
+        I am <span class="name">Ainga Ramangalahy</span>
+      </p>
+      <p class="personal-profile-work ls-06">A full stack web developer</p>
+      <p class="main-text ls-06">
         I am a 24 years old passionate web developer based in Antananarivo.
         <br />
         Curious and motivated by the desire to learn and improve. I have a sense
-        of listening and service reinforced by working on various projects. An evolving technical competence through continuous training.
+        of listening and service reinforced by working on various projects. An
+        evolving technical competence through continuous training.
       </p>
-      <div class="cta ">
-        <a [routerLink]="['/portfolio']"  class="btn mx-2 text-light">My portfolio</a>
-        <a [routerLink]="['/contact']" class="btn mx-2 text-light">Get in touch</a>
+      <div class="cta">
+        <a [routerLink]="['/portfolio']" class="btn mx-2 text-light">
+          <span>My portfolio</span>
+        </a>
+        <a [routerLink]="['/contact']" class="btn mx-2 text-light">
+          <span>Get in touch</span>
+        </a>
       </div>
       <!-- <p class="personal-profile-social align-self-end">
         <a href="https://github.com/aingaRamangalahy" target="_blank"
@@ -28,8 +35,8 @@
         ></a>
       </p> -->
       <div class="myself d-none d-md-inline">
-        <img src="assets/me_.png" alt="ainga ramangalahy">
+        <img src="assets/me_.png" alt="ainga ramangalahy" />
       </div>
     </div>
-    </div>
   </div>
+</div>
