--- a/src/app/pages/portfolio/portfolio-bloc/portfolio-bloc.component.html
+++ b/src/app/pages/portfolio/portfolio-bloc/portfolio-bloc.component.html
@@ -10,6 +10,8 @@
       'border-radius':'O'
     }"
   ></ngx-skeleton-loader>
+    <div class="overlay"></div>
+    <i class="fa fa-search-plus fa-2x icon"></i>
     <img (load)="onLoaded($event)" [src]="project?.images[0]?.path" alt="ainga project" />
   </div>
   <div class="desc-container px-4 col-12 col-sm-12 py-5 col-md-7">
