--- a/src/app/pages/skills/skills-bloc/skills-bloc.component.scss
+++ b/src/app/pages/skills/skills-bloc/skills-bloc.component.scss
@@ -9,12 +9,13 @@
   &:hover {
 
     .logo {
-      transform: translateY(10px);
+      transform: translateY(5px);
     }
     .progress {
       .progress-bar {
-        background-color: #669DD4;;
+        background-color: #669DD4;
       }
+
     }
   }
 
