--- a/src/app/@shared/navbar/navbar.component.html
+++ b/src/app/@shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-light">
-  <div class="container">
+  <div class="container-fluid">
     <button
       class="navbar-toggler"
       type="button"
