--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -16,6 +16,10 @@
       margin-bottom: 10px;
     }
 
+    .ls-06 {
+      letter-spacing: .6px;
+    }
+
     .personal-profile-work {
       font-size: 16px;
       line-height: 24px;
@@ -29,10 +33,42 @@
 
     .cta {
       a {
-        border: 1px solid #ccc;
-        text-transform: uppercase;
-        font-size: 13px;
-        font-weight: 300;
+        position: relative;
+        margin: auto;
+        padding: 19px 22px;
+        transition: all 0.2s ease;
+        &:before {
+          content: "";
+          position: absolute;
+          top: 11px;
+          left: 0;
+          display: block;
+          border-radius: 28px;
+          background: rgba(#0B53B6, 0.5);
+          width: 40px;
+          height: 40px;
+          transition: all 0.3s ease;
+        }
+        &:hover {
+          &:before {
+            width: 100%;
+            background:rgba(#0B53B6, 0.5);
+          }
+        }
+
+        &:active {
+          transform: scale(0.96);
+        }
+
+        span {
+          position: relative;
+          font-size: 14px;
+          line-height: 18px;
+          font-weight: 500;
+          letter-spacing: 0.15em;
+          text-transform: uppercase;
+          vertical-align: middle;
+        }
       }
     }
 
