--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -34,9 +34,7 @@
           ><i class="fa fa-facebook-square"></i
         ></a>
       </p> -->
-      <div class="myself d-none d-md-inline">
-        <img src="assets/me_.png" alt="ainga ramangalahy" />
-      </div>
+      <app-home-img-v2></app-home-img-v2>
     </div>
   </div>
 </div>
