--- a/src/app/pages/portfolio/portfolio-bloc/portfolio-bloc.component.scss
+++ b/src/app/pages/portfolio/portfolio-bloc/portfolio-bloc.component.scss
@@ -1,7 +1,6 @@
 .ptf-container {
   transition: all 0.3s ease-in-out;
   &:hover {
-
     cursor: pointer;
     .img-container {
       img {
@@ -25,7 +24,7 @@
     img {
       width: 100%;
       height: 100%;
-      transition: all .5s ease-in-out;
+      transition: all 0.5s ease-in-out;
     }
 
     .overlay {
@@ -33,7 +32,7 @@
       width: 100%;
       height: 100%;
       position: absolute;
-      transition: all .4s ease;
+      transition: all 0.4s ease;
       opacity: 0;
     }
 
@@ -44,13 +43,13 @@
       opacity: 0;
       transform: translate(-50%, -50%);
       color: #fff;
-      transition: all .4s ease;
+      transition: all 0.4s ease;
     }
   }
 
   .desc-container {
-
-  border: 1px solid #ccc;
+    border: 1px solid #ccc;
+    position: relative;
     .title {
       font-size: 18px;
       line-height: 30px;
@@ -74,6 +73,15 @@
         font-weight: 700;
         text-transform: uppercase;
         margin-bottom: 15px;
+      }
+    }
+
+    .url {
+      position: absolute;
+      right: 3px;
+      bottom: 3px;
+      a {
+        font-size: 14px;
       }
     }
   }
