remove skill progress bar

--- a/src/app/pages/skills/skills-bloc/skills-bloc.component.html
+++ b/src/app/pages/skills/skills-bloc/skills-bloc.component.html
@@ -6,7 +6,7 @@
   <div class="logo align-self-center">
     <i  [class]="skill?.className"></i>
   </div>
-  <div class="progress">
+  <!-- <div class="progress">
     <div
       class="progress-bar"
       role="progressbar"
@@ -18,5 +18,5 @@
     <div class="value">
       {{skill?.level}}%
     </div>
-  </div>
+  </div> -->
 </div>
